Prevent heading animation from overflowing to side

--- a/stylesheets/css/main.css
+++ b/stylesheets/css/main.css
@@ -86,6 +86,7 @@ h1 {
   transform: translatex(-50%);
   text-align: center;
   width: 90%;
+  overflow-x: hidden;
 }
 
 h1 > span {
